# rust-wasm-playground

./: Cargo.toml  LICENSE_MIT  README.md  build
macros/: Cargo.toml
macros/src/: lib.rs
src/: argon2.rs  bitcoin.rs  blake3.rs  errors.rs  exif.rs  hashes.rs  hex.rs  ipv6.rs  kaprekar.rs  leg_cpu.rs  lib.rs  log.rs  rust_parser.rs  utf8.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  bitcoin.ts  lib.ts  main.ts  router.ts
web/src/assets/leg-cpu-examples/function-stack/: code
web/src/assets/leg-cpu-examples/hello-world/: code
web/src/assets/leg-cpu-examples/water-world/: code  input
web/src/components/: Argon2.vue  Bitcoin.vue  Exif.vue  HelloWorld.vue  Home.vue  Ipv6Xor.vue  Kaprekar.vue  LegCpu.vue  RustParser.vue
web/src/components/bitcoin/: Frame.vue  P2shRedeemView.vue  ScriptAsmModal.vue  ScriptAsmModalView.vue  ScriptInput.vue  ScriptPubKeyFromAddressModal.vue  ScriptPubKeyHelper.vue  SecretKeyFromWifModal.vue  SelectableIcon.vue  SigningModal.vue  SigningView.vue  TxBuilder.vue  TxIn.vue  TxInCard.vue  TxOut.vue  TxOutCard.vue  TxiScriptSigInputModal.vue  TxoScriptPubKeyInputModal.vue
