[package]
name = "rust-wasm-playground"
version = "0.1.0"
authors = ["Zhai Can <bczhc0@126.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

argon2 = { version = "0.5.3", features = ["std"] }
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
rexif = "0.7.4"
anyhow = "1.0.86"
hex = "0.4.3"
hex-literal = "0.4.1"
blake3 = "1.5.4"
syn = { version = "2.0.79", features = ["extra-traits"] }
quote = "1.0.37"
leg-cpu-emulator = { git = "https://github.com/bczhc/leg-cpu-emulator" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
