[package]
name = "rust-wasm-playground"
version = "0.1.0"
authors = ["Zhai Can <bczhc0@126.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

argon2 = { version = "0.5.3", features = ["std"] }
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
rexif = "0.7.4"
anyhow = "1.0.86"
hex = "0.4.3"
hex-literal = "0.4.1"
blake3 = "1.5.4"
syn = { version = "2.0.79", features = ["extra-traits"] }
quote = "1.0.37"
leg-cpu-emulator = { git = "https://github.com/bczhc/leg-cpu-emulator" }
pretty-hex = "0.4.1"
rayon = "1.10.0"
num-bigint = "0.4.6"
js-sys = "0.3.72"
bitcoin_hashes = "0.14.0"
bitcoin = { path = "/home/bczhc/open-source/rust-bitcoin/bitcoin", features = ["secp-recovery"] }
digest = { version = "0.10.7", features = ["std"] }
ripemd = "0.1.3"
sha1 = "0.10.6"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# TODO: this is my local workaround, since the latest version with break-api changes hasn't been released.
[patch.crates-io]
base58ck = { path = "/home/bczhc/open-source/rust-bitcoin/base58", features = ["alloc"] }
bitcoin-primitives = { path = "/home/bczhc/open-source/rust-bitcoin/primitives" }
bitcoin_hashes = { path = "/home/bczhc/open-source/rust-bitcoin/hashes", version = "=0.15.0" }
bitcoin-internals = { path = "/home/bczhc/open-source/rust-bitcoin/internals" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
